--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,10 @@ dependencies {
     // Logger
     implementation 'com.orhanobut:logger:2.2.0'
     implementation project(':pubgkt')
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    // BaseRecyclerViewAdapterHelper
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
 }
