--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.zyoung.mypubg">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".app"
         android:allowBackup="true"
@@ -20,6 +21,7 @@
         </activity>
         <activity android:name=".activity.TestActivity" />
         <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.MatchInfoActivity"/>
     </application>
 
 </manifest>
